FIX: Global routing and Vercel path mapping

--- a/vercel.json
+++ b/vercel.json
@@ -16,6 +16,10 @@
             "dest": "backend/server.js"
         },
         {
+            "src": "/health",
+            "dest": "backend/server.js"
+        },
+        {
             "src": "/(.*)",
             "dest": "frontend/$1"
         }
