--- a/vercel.json
+++ b/vercel.json
@@ -1,30 +1,13 @@
 {
     "version": 2,
-    "builds": [
+    "rewrites": [
         {
-            "src": "frontend/package.json",
-            "use": "@vercel/next"
+            "source": "/api/:path*",
+            "destination": "http://72.61.235.182:3001/api/:path*"
         },
         {
-            "src": "backend/server.js",
-            "use": "@vercel/node"
+            "source": "/(.*)",
+            "destination": "/frontend/$1"
         }
-    ],
-    "routes": [
-        {
-            "src": "/api/(.*)",
-            "dest": "backend/server.js"
-        },
-        {
-            "src": "/health",
-            "dest": "backend/server.js"
-        },
-        {
-            "src": "/(.*)",
-            "dest": "frontend/$1"
-        }
-    ],
-    "env": {
-        "NODE_ENV": "production"
-    }
+    ]
 }
