feat: Google Login with NextAuth.js - replaces broken email/password auth

--- a/.env.vercel
+++ b/.env.vercel
@@ -1,7 +1,7 @@
 # Environment Variables for Vercel Deployment
 
 ## Frontend (.env.local)
-NEXT_PUBLIC_API_URL=https://your-backend-url.railway.app
+NEXT_PUBLIC_API_URL=http://72.61.235.182:3001
 
 ## Backend (Railway/Render)
 DATABASE_URL=postgresql://user:password@host:5432/leadenforce
