--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,7 +15,8 @@
         "axios": "^1.6.5",
         "recharts": "^2.10.3",
         "lucide-react": "^0.303.0",
-        "date-fns": "^3.0.6"
+        "date-fns": "^3.0.6",
+        "next-auth": "^4.24.5"
     },
     "devDependencies": {
         "@types/node": "^20",
