--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -50,6 +50,8 @@ services:
     container_name: leadenforce-backend
     environment:
       NODE_ENV: development
+      # IMPORTANT: If deploying to VPS, change localhost to your VPS IP
+      # Example: DATABASE_URL: postgresql://leadenforce_user:secure_password_change_in_production@postgres:5432/leadenforce
       DATABASE_URL: postgresql://leadenforce_user:secure_password_change_in_production@postgres:5432/leadenforce
       MONGODB_URL: mongodb://admin:secure_password_change_in_production@mongodb:27017/leadenforce?authSource=admin
       REDIS_URL: redis://redis:6379
@@ -74,7 +76,8 @@ services:
       dockerfile: Dockerfile
     container_name: leadenforce-frontend
     environment:
-      NEXT_PUBLIC_API_URL: http://localhost:3001
+      # Change localhost to your VPS IP address (e.g., http://72.61.235.182:3001)
+      NEXT_PUBLIC_API_URL: http://72.61.235.182:3001
     ports:
       - "3000:3000"
     depends_on:
@@ -108,6 +111,7 @@ volumes:
   postgres_data:
   mongodb_data:
   redis_data:
+
 
 networks:
   leadenforce-network:
