--- a/vercel.json
+++ b/vercel.json
@@ -2,8 +2,16 @@
     "version": 2,
     "rewrites": [
         {
-            "source": "/api/:path*",
-            "destination": "http://72.61.235.182:3001/api/:path*"
+            "source": "/api/analytics/:path*",
+            "destination": "http://72.61.235.182:3001/api/analytics/:path*"
+        },
+        {
+            "source": "/api/campaigns/:path*",
+            "destination": "http://72.61.235.182:3001/api/campaigns/:path*"
+        },
+        {
+            "source": "/api/leads/:path*",
+            "destination": "http://72.61.235.182:3001/api/leads/:path*"
         },
         {
             "source": "/(.*)",
