--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,7 +16,7 @@
         "recharts": "^2.10.3",
         "lucide-react": "^0.303.0",
         "date-fns": "^3.0.6",
-        "next-auth": "^4.24.5"
+        "firebase": "^10.7.1"
     },
     "devDependencies": {
         "@types/node": "^20",
