--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -3,11 +3,10 @@ FROM node:18-alpine
 WORKDIR /app
 
 COPY package*.json ./
-
-RUN npm install
+RUN npm ci --only=production
 
 COPY . .
 
 EXPOSE 3001
 
-CMD ["npm", "run", "dev"]
+CMD ["node", "server.js"]
