--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,10 +5,11 @@ services:
   postgres:
     image: postgres:15-alpine
     container_name: leadenforce-postgres
+    restart: always
     environment:
-      POSTGRES_DB: leadenforce
-      POSTGRES_USER: leadenforce_user
-      POSTGRES_PASSWORD: secure_password_change_in_production
+      POSTGRES_DB: ${POSTGRES_DB:-leadenforce}
+      POSTGRES_USER: ${POSTGRES_USER:-leadenforce_user}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-secure_password_change_in_production}
     ports:
       - "5432:5432"
     volumes:
@@ -16,31 +17,28 @@ services:
       - ./database/schema.sql:/docker-entrypoint-initdb.d/schema.sql
     networks:
       - leadenforce-network
-
-  # MongoDB - Scraped data, logs
-  mongodb:
-    image: mongo:7
-    container_name: leadenforce-mongodb
-    environment:
-      MONGO_INITDB_ROOT_USERNAME: admin
-      MONGO_INITDB_ROOT_PASSWORD: secure_password_change_in_production
-    ports:
-      - "27017:27017"
-    volumes:
-      - mongodb_data:/data/db
-    networks:
-      - leadenforce-network
+    healthcheck:
+      test: [ "CMD-SHELL", "pg_isready -U ${POSTGRES_USER:-leadenforce_user}" ]
+      interval: 5s
+      timeout: 5s
+      retries: 5
 
   # Redis - Job queue, caching
   redis:
     image: redis:7-alpine
     container_name: leadenforce-redis
+    restart: always
     ports:
       - "6379:6379"
     volumes:
       - redis_data:/data
     networks:
       - leadenforce-network
+    healthcheck:
+      test: [ "CMD", "redis-cli", "ping" ]
+      interval: 5s
+      timeout: 5s
+      retries: 5
 
   # Backend API
   backend:
@@ -48,24 +46,20 @@ services:
       context: ./backend
       dockerfile: Dockerfile
     container_name: leadenforce-backend
+    restart: always
     environment:
-      NODE_ENV: development
-      # IMPORTANT: If deploying to VPS, change localhost to your VPS IP
-      # Example: DATABASE_URL: postgresql://leadenforce_user:secure_password_change_in_production@postgres:5432/leadenforce
-      DATABASE_URL: postgresql://leadenforce_user:secure_password_change_in_production@postgres:5432/leadenforce
-      MONGODB_URL: mongodb://admin:secure_password_change_in_production@mongodb:27017/leadenforce?authSource=admin
+      NODE_ENV: production
+      DATABASE_URL: postgresql://${POSTGRES_USER:-leadenforce_user}:${POSTGRES_PASSWORD:-secure_password_change_in_production}@postgres:5432/${POSTGRES_DB:-leadenforce}
       REDIS_URL: redis://redis:6379
-      JWT_SECRET: change_this_secret_in_production
+      JWT_SECRET: ${JWT_SECRET:-change_this_secret_in_production}
       PORT: 3001
     ports:
       - "3001:3001"
     depends_on:
-      - postgres
-      - mongodb
-      - redis
-    volumes:
-      - ./backend:/app
-      - /app/node_modules
+      postgres:
+        condition: service_healthy
+      redis:
+        condition: service_healthy
     networks:
       - leadenforce-network
 
@@ -74,42 +68,19 @@ services:
     build:
       context: ./frontend
       dockerfile: Dockerfile
+      args:
+        NEXT_PUBLIC_API_URL: http://${VPS_IP:-localhost}:3001
     container_name: leadenforce-frontend
-    environment:
-      # Change localhost to your VPS IP address (e.g., http://72.61.235.182:3001)
-      NEXT_PUBLIC_API_URL: http://72.61.235.182:3001
+    restart: always
     ports:
       - "3000:3000"
     depends_on:
       - backend
-    volumes:
-      - ./frontend:/app
-      - /app/node_modules
-      - /app/.next
-    networks:
-      - leadenforce-network
-
-  # LinkedIn Worker
-  linkedin-worker:
-    build:
-      context: ./workers
-      dockerfile: Dockerfile.linkedin
-    container_name: leadenforce-linkedin-worker
-    environment:
-      REDIS_URL: redis://redis:6379
-      DATABASE_URL: postgresql://leadenforce_user:secure_password_change_in_production@postgres:5432/leadenforce
-      WORKER_TYPE: linkedin
-    depends_on:
-      - postgres
-      - redis
-    volumes:
-      - ./workers:/app
     networks:
       - leadenforce-network
 
 volumes:
   postgres_data:
-  mongodb_data:
   redis_data:
 
 
