--- a/vercel.json
+++ b/vercel.json
@@ -10,14 +10,18 @@
             "use": "@vercel/next"
         }
     ],
-    "routes": [
+    "rewrites": [
         {
-            "src": "/api/(.*)",
-            "dest": "/backend/server.js"
+            "source": "/api/hello",
+            "destination": "/api/hello.js"
         },
         {
-            "src": "/(.*)",
-            "dest": "/frontend/$1"
+            "source": "/api/(.*)",
+            "destination": "/backend/server.js"
+        },
+        {
+            "source": "/(.*)",
+            "destination": "/frontend/$1"
         }
     ]
 }
