Switch to Vercel Zero Config (remove builds, add api/index.js)

--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,5 @@
 {
     "version": 2,
-    "builds": [
-        {
-            "src": "backend/server.js",
-            "use": "@vercel/node"
-        },
-        {
-            "src": "frontend/package.json",
-            "use": "@vercel/next"
-        }
-    ],
     "rewrites": [
         {
             "source": "/api/hello",
@@ -17,7 +7,7 @@
         },
         {
             "source": "/api/(.*)",
-            "destination": "/backend/server.js"
+            "destination": "/api/index.js"
         },
         {
             "source": "/(.*)",
