--- a/package.json
+++ b/package.json
@@ -23,5 +23,21 @@
     "engines": {
         "node": ">=18.0.0",
         "npm": ">=9.0.0"
+    },
+    "dependencies": {
+        "express": "^4.18.2",
+        "pg": "^8.11.3",
+        "mongodb": "^6.3.0",
+        "redis": "^4.6.12",
+        "bullmq": "^5.1.5",
+        "bcryptjs": "^2.4.3",
+        "jsonwebtoken": "^9.0.2",
+        "dotenv": "^16.3.1",
+        "cors": "^2.8.5",
+        "helmet": "^7.1.0",
+        "express-rate-limit": "^7.1.5",
+        "express-validator": "^7.0.1",
+        "axios": "^1.6.5",
+        "crypto-js": "^4.2.0"
     }
 }
